canvas 크기 변경시 dimension 안맞는 오류 수정

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 		function canvasResize(){
 			canvas.setWidth($("#canvases").parent().width());
 			canvas.setHeight($("#canvases").parent().width()/16*9);
+			canvas.setDimensions({width: 1920, height: 1080},{backstoreOnly:true});
 		}
 		var app = new Vue({
 			el: "#app",
