--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 	<script src="https://unpkg.com/vue@2.6.2/dist/vue.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/2.6.0/fabric.js"></script>
 	<script src="pwentk.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:400,700,900" rel="stylesheet">
 	<style>
 	body{
+		font-family: "Lato", "Noto Sans KR", sans-serif;
+		font-weight: 400;
 	}
 	#main{
 		padding: 20px;
@@ -64,11 +67,14 @@
 			</div>
 			<div class="column">
 				<div class="ui segment">
-					황금시대의 천하를 청춘의 것이다. 생명을 수 풀이 것은 그들의 피는 봄날의 따뜻한 피다. 밝은 같은 없으면, 기쁘며. 무엇을 이성은 아니다. 되려니와. 힘있다, 얼마나 할지라도 가는 못하다 곳이 보배를 위하여서.
-
-					위하여. 심장은 타오르고 속에 얼마나 대한 있다, 발휘하기 것이다. 대중을 어디 그들의 그들은 황금시대다. 눈에 불러 있음으로써 많이 따뜻한 하는 약동하다, 천자만홍이 품었기 청춘이 끓는 않는 끓는다, 쓸쓸하랴? 되는 바로 있음으로써 것이다. 구할 황금시대의 풀밭에 미묘한 옷을 뿐이다.
-
-					주는 이상. 같은 구하지 봄바람이다. 기쁘며. 황금시대의 것이 그들은 있으랴? 거친 같으며, 길을 과실이 굳세게 설레는 그들의 것이다. 피고, 장식하는 이상의 말이다. 이상 눈에 있으며.
+					ㅇㅅㅇ
+					안녕하시오
+					Hello, World!
+					테스트 중이올시다.
+					그리고, 말일세?
+					Hello
+					How are you?
+					프랑스
 				</div>
 			</div>
 		</div>
