pwentkFabric.js 이름 변경 src에 적용

--- a/index.html
+++ b/index.html
@@ -211,6 +211,6 @@
 		$(canvasResize);
 		
 	</script>
-	<script src="canvasDraw.js"></script>
+	<script src="pwentkFabric.js"></script>
 </body>
 </html>
