pwentk.BlockSet의 text -> template

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			<div class="column">
 				<div class="ui segment" style="height: 100%;">
 					<svg class="ws" id="ws" style="width:100%;height:100%;">
-						<component v-for="block in blocks" is="pwentk-block" :path="block.getPath()" :text="block.text"></component>
+						<component v-for="block in blocks" is="pwentk-block" :path="block.getPath()" :text="block.template"></component>
 					</svg>
 				</div>
 			</div>
