--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			<div class="column">
 				<div class="ui segment" style="height: 100%;">
 					<svg class="ws" id="ws" style="width:100%;height:100%;">
-						<component v-for="block in blocks" is="pwentk-block" :path="block.getPath()" :text="block.template"></component>
+						<component v-for="(block, index) in blocks" is="pwentk-block" :path="block.getPath()" :key="index" :text="block.template" :index="index"></component>
 					</svg>
 				</div>
 			</div>
@@ -102,17 +102,14 @@
 			canvas.setHeight($("#canvases").parent().width()/16*9);
 			canvas.setDimensions({width: 1920, height: 1080},{backstoreOnly:true});
 		}
-		var ws = {
-			scale: 2
-		};
 		var block = Vue.component("pwentk-block",{
-			template: `<g :class="['draggable', 'blockGroup', {clicked: clicked}]"
+			template: `<g :class="['draggable', 'blockGroup', {clicked: clicked}, {lastClick: (lastClick==index)}]"
 			:style="{transform:'translate('+x+'px,'+y+'px) scale('+ws.scale+')'}">
 			<path class="basic block" 
 			:d="path"/>
 			<text class="blockText" x="7.5" y="7">{{text}}</text>
 			</g>`,
-			props:["text", "path"],
+			props:["text", "path", "index"],
 			data(){
 				return {
 					x:0, 
@@ -120,12 +117,13 @@
 					clicked:false,
 					beforeX:0,
 					beforeY:0,
-					ws:ws
+					ws:app.ws,
+					lastClick:app.lastClick
 				}
 			},
 			created(){
 				//this.path = this.getPath(this.text);
-				interact(".draggable")
+				interact(`#ws > g:nth-child(${this.index+1})`)
 				.draggable({
 					inertia: true,
 					restrict: {
@@ -168,6 +166,7 @@
 				},
 				log: console.log,
 				dragStart: function(e){
+					app.lastClick = this.index;
 					this.clicked = true;
 					this.beforeX = e.clientX;
 					this.beforeY = e.clientY;
@@ -193,7 +192,11 @@
 				scenes: [
 				{name: "장면 1", active: true}
 				],
-				blocks: []
+				blocks: [],
+				ws: {
+					scale: 2
+				},
+				lastClick: undefined
 			},
 			methods: {
 				sceneChange: function(selectScene){
