--- a/example/index.html
+++ b/example/index.html
@@ -15,7 +15,7 @@
 	<!-- interact.js -->
 	<script src="https://cdn.jsdelivr.net/npm/interactjs@1.3.4/dist/interact.min.js"></script>
 	<!-- Pwentk -->
-	<script src="../../dist/pwentk.js"></script>
+	<script src="../browser/pwentk.min.js"></script>
 	<!-- Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:400,700,900" rel="stylesheet">
 
@@ -106,7 +106,7 @@
 	</sui-grid>
 </div>
 </div>
-<script src="../../src/pwentkFabric.js"></script>
+<script src="../src/pwentkFabric.js"></script>
 <script src="ui.js"></script>
 </body>
 </html>
